force-app/main/default/objects/Student__c/fields/Academic_Standing__c.field-meta.xml
<CustomField>
    <fullName>Academic_Standing__c</fullName>
    <label>Academic Standing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Good Standing</fullName>
            </value>
            <value>
                <fullName>Probation</fullName>
            </value>
            <value>
                <fullName>Dismissed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>