force-app/main/default/objects/Student__c/fields/Admission_Date__c.field-meta.xml
<CustomField>
    <fullName>Admission_Date__c</fullName>
    <description>Official date of admission into the university.</description>
    <inlineHelpText>Official date of admission into the university.</inlineHelpText>
    <label>Admission Date</label>
    <type>Date</type>
</CustomField>