force-app/main/default/objects/Student__c/fields/Attendance__c.field-meta.xml
<CustomField>
    <fullName>Attendance__c</fullName>
    <description>Overall cumulative attendance percentage of the student.</description>
    <inlineHelpText>Overall academic attendance percentage across registered courses.</inlineHelpText>
    <label>Attendance</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>