force-app/main/default/objects/Student__c/fields/Cumulative_GPA__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_GPA__c</fullName>
    <label>Cumulative GPA</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>