force-app/main/default/objects/Student__c/fields/Faculty_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Faculty Advisor</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Advised Students</relationshipLabel>
    <relationshipName>Advised_Students</relationshipName>
    <type>Lookup</type>
</CustomField>