force-app/main/default/objects/Student__c/fields/Fee_Status__c.field-meta.xml
<CustomField>
    <fullName>Fee_Status__c</fullName>
    <description>Current overall fee settlement status for the student.</description>
    <label>Fee Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Partially Paid</fullName>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>