force-app/main/default/objects/Student__c/fields/Registered_Courses_Count__c.field-meta.xml
<CustomField>
    <fullName>Registered_Courses_Count__c</fullName>
    <description>Number of active registered courses for this student.</description>
    <label>Registered Courses Count</label>
    <summaryFilterItems>
        <field>Enrolment__c.Enrolment_Status__c</field>
        <operation>equals</operation>
        <value>Registered</value>
    </summaryFilterItems>
    <summaryForeignKey>Enrolment__c.Student__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>