force-app/main/default/objects/Student__c/fields/Semester__c.field-meta.xml
<CustomField>
    <fullName>Semester__c</fullName>
    <description>Current enrolled semester of the student.</description>
    <label>Semester</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Semester 1</fullName>
                <default>true</default>
                <label>Semester 1</label>
            </value>
            <value>
                <fullName>Semester 2</fullName>
            </value>
            <value>
                <fullName>Semester 3</fullName>
            </value>
            <value>
                <fullName>Semester 4</fullName>
            </value>
            <value>
                <fullName>Semester 5</fullName>
            </value>
            <value>
                <fullName>Semester 6</fullName>
            </value>
            <value>
                <fullName>Semester 7</fullName>
            </value>
            <value>
                <fullName>Semester 8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>