force-app/main/default/objects/Student__c/fields/Source_Application__c.field-meta.xml
<CustomField>
    <fullName>Source_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>