force-app/main/default/objects/Student__c/validationRules/Advisor_Required_Once_Enrolled.validationRule-meta.xml
<ValidationRule>
    <fullName>Advisor_Required_Once_Enrolled</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Enrolment_Status__c, &apos;Enrolled&apos;) &amp;&amp; ISBLANK(Faculty_Advisor__c)</errorConditionFormula>
    <errorDisplayField>Faculty_Advisor__c</errorDisplayField>
    <errorMessage>An enrolled student must have an assigned Faculty Advisor.</errorMessage>
</ValidationRule>