force-app/main/default/objects/Student__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Student_ID__c</columns>
    <columns>Student_Name__c</columns>
    <columns>Program__c</columns>
    <columns>Enrolment_Status__c</columns>
    <columns>Academic_Standing__c</columns>
    <columns>Cumulative_GPA__c</columns>
    <columns>Faculty_Advisor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>