force-app/main/default/objects/Student__c/listViews/My_Advisees.listView-meta.xml
<ListView>
    <fullName>My_Advisees</fullName>
    <columns>NAME</columns>
    <columns>Student_Name__c</columns>
    <columns>Student_ID__c</columns>
    <columns>Cumulative_GPA__c</columns>
    <columns>Academic_Standing__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Enrolment_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>My Advisees</label>
</ListView>