force-app/main/default/objects/Student__c/listViews/Students_on_Probation.listView-meta.xml
<ListView>
    <fullName>Students_on_Probation</fullName>
    <columns>NAME</columns>
    <columns>Student_Name__c</columns>
    <columns>Faculty_Advisor__c</columns>
    <columns>Cumulative_GPA__c</columns>
    <columns>Program__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Academic_Standing__c</field>
        <operation>equals</operation>
        <value>Probation</value>
    </filters>
    <label>Students on Probation</label>
</ListView>